# ha-buddy

./: Cargo.toml  Protocol.md  README.md  __init__.py  config_flow.py  const.py  list_sensors.py  list_switches.py  manifest.json  scan.py  sensor.py  switch.py  test.py
.cargo/: config.toml
python/: connection.py  device.py  frame.py
python/entities/: sensor.py  switch.py
src/: crc.rs  datalink.rs  driver.rs  handler.rs  homeassistant.rs  int.rs  main.rs  network.rs  panic.rs
src/driver/: ds18b20.rs
src/homeassistant/: entity.rs  sensor.rs  switch.rs
src/homeassistant/entity/: device_class.rs
src/homeassistant/sensor/: device_class.rs  sensor_ref.rs  sensor_value.rs
src/homeassistant/switch/: switch_ref.rs
src/network/: datalink.rs
src/sensor/: state_class.rs
