[package]
name = "ha-buddy"
version = "0.1.0"
authors = ["Max Kofler <kofler.max.dev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ha-buddy"
test = false
bench = false

[dependencies]
nb = "1.1.0"
embedded-hal = "0.2.3"
avr-device = "0.5.1"
onewire = "0.3.13"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["arduino-mega2560"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
